[package]
name = "async_ffi"
version = "0.1.0"
edition = "2018"

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "master" }

[lib]
crate-type = ["cdylib"]
